src/parser.output
Terminals unused in grammar

   KSTRING
   KREGEX
   KBEGINDEF
   KENDDEF
   KPERIOD


Grammar

    0 $accept: line $end

    1 line: line definition KSEMI
    2     | definition KSEMI
    3     | line function_call KSEMI
    4     | function_call KSEMI
    5     | line error KSEMI

    6 definition: variable_def

    7 pointer: pointer LSQUBRACE pointer RSQUBRACE
    8        | pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | LPAREN pointer RPAREN
   10        | pointer KPLUS pointer
   11        | pointer KMINUS pointer
   12        | pointer KTIMES pointer
   13        | pointer KDIVIDED pointer
   14        | list_content_p
   15        | str_p
   16        | int_p
   17        | TIDENTIFIER

   18 function_call: TIDENTIFIER pointer

   19 variable_def: KDEF TIDENTIFIER KEQUALS pointer

   20 list_content_p: LBRACE list_content RBRACE

   21 list_content: list_content pointer
   22             | list_content pointer KCOMMA
   23             | pointer KCOMMA
   24             | pointer

   25 int_p: TINTEGER

   26 str_p: string_p
   27      | regex_p

   28 string_p: TSTR

   29 regex_p: TRGXP


Terminals, with rules where they appear

$end (0) 0
error (256) 5
KSTRING (258)
KREGEX (259)
KSEMI (260) 1 2 3 4 5
KCOMMA (261) 22 23
KEQUALS (262) 19
KPLUS (263) 10
KMINUS (264) 11
KTIMES (265) 12
KDIVIDED (266) 13
LBRACE (267) 20
RBRACE (268) 20
LSQUBRACE (269) 7 8
RSQUBRACE (270) 7 8
KBEGINDEF (271)
KENDDEF (272)
KDEF (273) 19
KPERIOD (274)
LPAREN (275) 9
RPAREN (276) 9
KCOLON (277) 8
TSTR (278) 28
TRGXP (279) 29
TIDENTIFIER (280) 17 18 19
TINTEGER (281) 25


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
line (28)
    on left: 1 2 3 4 5, on right: 0 1 3 5
definition (29)
    on left: 6, on right: 1 2
pointer (30)
    on left: 7 8 9 10 11 12 13 14 15 16 17, on right: 7 8 9 10 11 12
    13 18 19 21 22 23 24
function_call (31)
    on left: 18, on right: 3 4
variable_def (32)
    on left: 19, on right: 6
list_content_p (33)
    on left: 20, on right: 14
list_content (34)
    on left: 21 22 23 24, on right: 20 21 22
int_p (35)
    on left: 25, on right: 16
str_p (36)
    on left: 26 27, on right: 15
string_p (37)
    on left: 28, on right: 26
regex_p (38)
    on left: 29, on right: 27


State 0

    0 $accept: . line $end
    1 line: . line definition KSEMI
    2     | . definition KSEMI
    3     | . line function_call KSEMI
    4     | . function_call KSEMI
    5     | . line error KSEMI
    6 definition: . variable_def
   18 function_call: . TIDENTIFIER pointer
   19 variable_def: . KDEF TIDENTIFIER KEQUALS pointer

    KDEF         shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2

    line           go to state 3
    definition     go to state 4
    function_call  go to state 5
    variable_def   go to state 6


State 1

   19 variable_def: KDEF . TIDENTIFIER KEQUALS pointer

    TIDENTIFIER  shift, and go to state 7


State 2

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   18 function_call: TIDENTIFIER . pointer
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 14
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 3

    0 $accept: line . $end
    1 line: line . definition KSEMI
    3     | line . function_call KSEMI
    5     | line . error KSEMI
    6 definition: . variable_def
   18 function_call: . TIDENTIFIER pointer
   19 variable_def: . KDEF TIDENTIFIER KEQUALS pointer

    $end         shift, and go to state 20
    error        shift, and go to state 21
    KDEF         shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2

    definition     go to state 22
    function_call  go to state 23
    variable_def   go to state 6


State 4

    2 line: definition . KSEMI

    KSEMI  shift, and go to state 24


State 5

    4 line: function_call . KSEMI

    KSEMI  shift, and go to state 25


State 6

    6 definition: variable_def .

    $default  reduce using rule 6 (definition)


State 7

   19 variable_def: KDEF TIDENTIFIER . KEQUALS pointer

    KEQUALS  shift, and go to state 26


State 8

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   20               | LBRACE . list_content RBRACE
   21 list_content: . list_content pointer
   22             | . list_content pointer KCOMMA
   23             | . pointer KCOMMA
   24             | . pointer
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 27
    list_content_p  go to state 15
    list_content    go to state 28
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 9

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
    9        | LPAREN . pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 29
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 10

   28 string_p: TSTR .

    $default  reduce using rule 28 (string_p)


State 11

   29 regex_p: TRGXP .

    $default  reduce using rule 29 (regex_p)


State 12

   17 pointer: TIDENTIFIER .

    $default  reduce using rule 17 (pointer)


State 13

   25 int_p: TINTEGER .

    $default  reduce using rule 25 (int_p)


State 14

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer
   18 function_call: TIDENTIFIER pointer .  [KSEMI]

    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 18 (function_call)


State 15

   14 pointer: list_content_p .

    $default  reduce using rule 14 (pointer)


State 16

   16 pointer: int_p .

    $default  reduce using rule 16 (pointer)


State 17

   15 pointer: str_p .

    $default  reduce using rule 15 (pointer)


State 18

   26 str_p: string_p .

    $default  reduce using rule 26 (str_p)


State 19

   27 str_p: regex_p .

    $default  reduce using rule 27 (str_p)


State 20

    0 $accept: line $end .

    $default  accept


State 21

    5 line: line error . KSEMI

    KSEMI  shift, and go to state 35


State 22

    1 line: line definition . KSEMI

    KSEMI  shift, and go to state 36


State 23

    3 line: line function_call . KSEMI

    KSEMI  shift, and go to state 37


State 24

    2 line: definition KSEMI .

    $default  reduce using rule 2 (line)


State 25

    4 line: function_call KSEMI .

    $default  reduce using rule 4 (line)


State 26

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   19 variable_def: KDEF TIDENTIFIER KEQUALS . pointer
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 38
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 27

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer
   23 list_content: pointer . KCOMMA
   24             | pointer .  [LBRACE, RBRACE, LPAREN, TSTR, TRGXP, TIDENTIFIER, TINTEGER]

    KCOMMA     shift, and go to state 39
    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 24 (list_content)


State 28

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   20               | LBRACE list_content . RBRACE
   21 list_content: list_content . pointer
   22             | list_content . pointer KCOMMA
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    RBRACE       shift, and go to state 40
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 41
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 29

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | LPAREN pointer . RPAREN
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer

    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34
    RPAREN     shift, and go to state 42


State 30

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   10        | pointer KPLUS . pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 43
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 31

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   11        | pointer KMINUS . pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 44
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 32

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   12        | pointer KTIMES . pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 45
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 33

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   13        | pointer KDIVIDED . pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 46
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 34

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    7        | pointer LSQUBRACE . pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    8        | pointer LSQUBRACE . pointer KCOLON pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 47
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 35

    5 line: line error KSEMI .

    $default  reduce using rule 5 (line)


State 36

    1 line: line definition KSEMI .

    $default  reduce using rule 1 (line)


State 37

    3 line: line function_call KSEMI .

    $default  reduce using rule 3 (line)


State 38

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer
   19 variable_def: KDEF TIDENTIFIER KEQUALS pointer .  [KSEMI]

    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 19 (variable_def)


State 39

   23 list_content: pointer KCOMMA .

    $default  reduce using rule 23 (list_content)


State 40

   20 list_content_p: LBRACE list_content RBRACE .

    $default  reduce using rule 20 (list_content_p)


State 41

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer
   21 list_content: list_content pointer .  [LBRACE, RBRACE, LPAREN, TSTR, TRGXP, TIDENTIFIER, TINTEGER]
   22             | list_content pointer . KCOMMA

    KCOMMA     shift, and go to state 48
    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 21 (list_content)


State 42

    9 pointer: LPAREN pointer RPAREN .

    $default  reduce using rule 9 (pointer)


State 43

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   10        | pointer KPLUS pointer .  [KSEMI, KCOMMA, KPLUS, KMINUS, LBRACE, RBRACE, RSQUBRACE, LPAREN, RPAREN, KCOLON, TSTR, TRGXP, TIDENTIFIER, TINTEGER]
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer

    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 10 (pointer)

    Conflict between rule 10 and token KPLUS resolved as reduce (%left KPLUS).
    Conflict between rule 10 and token KMINUS resolved as reduce (%left KMINUS).
    Conflict between rule 10 and token KTIMES resolved as shift (KPLUS < KTIMES).
    Conflict between rule 10 and token KDIVIDED resolved as shift (KPLUS < KDIVIDED).
    Conflict between rule 10 and token LSQUBRACE resolved as shift (KPLUS < LSQUBRACE).


State 44

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   11        | pointer KMINUS pointer .  [KSEMI, KCOMMA, KPLUS, KMINUS, LBRACE, RBRACE, RSQUBRACE, LPAREN, RPAREN, KCOLON, TSTR, TRGXP, TIDENTIFIER, TINTEGER]
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer

    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 11 (pointer)

    Conflict between rule 11 and token KPLUS resolved as reduce (%left KPLUS).
    Conflict between rule 11 and token KMINUS resolved as reduce (%left KMINUS).
    Conflict between rule 11 and token KTIMES resolved as shift (KMINUS < KTIMES).
    Conflict between rule 11 and token KDIVIDED resolved as shift (KMINUS < KDIVIDED).
    Conflict between rule 11 and token LSQUBRACE resolved as shift (KMINUS < LSQUBRACE).


State 45

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   12        | pointer KTIMES pointer .  [KSEMI, KCOMMA, KPLUS, KMINUS, KTIMES, KDIVIDED, LBRACE, RBRACE, RSQUBRACE, LPAREN, RPAREN, KCOLON, TSTR, TRGXP, TIDENTIFIER, TINTEGER]
   13        | pointer . KDIVIDED pointer

    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 12 (pointer)

    Conflict between rule 12 and token KPLUS resolved as reduce (KPLUS < KTIMES).
    Conflict between rule 12 and token KMINUS resolved as reduce (KMINUS < KTIMES).
    Conflict between rule 12 and token KTIMES resolved as reduce (%left KTIMES).
    Conflict between rule 12 and token KDIVIDED resolved as reduce (%left KDIVIDED).
    Conflict between rule 12 and token LSQUBRACE resolved as shift (KTIMES < LSQUBRACE).


State 46

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer
   13        | pointer KDIVIDED pointer .  [KSEMI, KCOMMA, KPLUS, KMINUS, KTIMES, KDIVIDED, LBRACE, RBRACE, RSQUBRACE, LPAREN, RPAREN, KCOLON, TSTR, TRGXP, TIDENTIFIER, TINTEGER]

    LSQUBRACE  shift, and go to state 34

    $default  reduce using rule 13 (pointer)

    Conflict between rule 13 and token KPLUS resolved as reduce (KPLUS < KDIVIDED).
    Conflict between rule 13 and token KMINUS resolved as reduce (KMINUS < KDIVIDED).
    Conflict between rule 13 and token KTIMES resolved as reduce (%left KTIMES).
    Conflict between rule 13 and token KDIVIDED resolved as reduce (%left KDIVIDED).
    Conflict between rule 13 and token LSQUBRACE resolved as shift (KDIVIDED < LSQUBRACE).


State 47

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    7        | pointer LSQUBRACE pointer . RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
    8        | pointer LSQUBRACE pointer . KCOLON pointer RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer

    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34
    RSQUBRACE  shift, and go to state 49
    KCOLON     shift, and go to state 50


State 48

   22 list_content: list_content pointer KCOMMA .

    $default  reduce using rule 22 (list_content)


State 49

    7 pointer: pointer LSQUBRACE pointer RSQUBRACE .

    $default  reduce using rule 7 (pointer)


State 50

    7 pointer: . pointer LSQUBRACE pointer RSQUBRACE
    8        | . pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE
    8        | pointer LSQUBRACE pointer KCOLON . pointer RSQUBRACE
    9        | . LPAREN pointer RPAREN
   10        | . pointer KPLUS pointer
   11        | . pointer KMINUS pointer
   12        | . pointer KTIMES pointer
   13        | . pointer KDIVIDED pointer
   14        | . list_content_p
   15        | . str_p
   16        | . int_p
   17        | . TIDENTIFIER
   20 list_content_p: . LBRACE list_content RBRACE
   25 int_p: . TINTEGER
   26 str_p: . string_p
   27      | . regex_p
   28 string_p: . TSTR
   29 regex_p: . TRGXP

    LBRACE       shift, and go to state 8
    LPAREN       shift, and go to state 9
    TSTR         shift, and go to state 10
    TRGXP        shift, and go to state 11
    TIDENTIFIER  shift, and go to state 12
    TINTEGER     shift, and go to state 13

    pointer         go to state 51
    list_content_p  go to state 15
    int_p           go to state 16
    str_p           go to state 17
    string_p        go to state 18
    regex_p         go to state 19


State 51

    7 pointer: pointer . LSQUBRACE pointer RSQUBRACE
    8        | pointer . LSQUBRACE pointer KCOLON pointer RSQUBRACE
    8        | pointer LSQUBRACE pointer KCOLON pointer . RSQUBRACE
   10        | pointer . KPLUS pointer
   11        | pointer . KMINUS pointer
   12        | pointer . KTIMES pointer
   13        | pointer . KDIVIDED pointer

    KPLUS      shift, and go to state 30
    KMINUS     shift, and go to state 31
    KTIMES     shift, and go to state 32
    KDIVIDED   shift, and go to state 33
    LSQUBRACE  shift, and go to state 34
    RSQUBRACE  shift, and go to state 52


State 52

    8 pointer: pointer LSQUBRACE pointer KCOLON pointer RSQUBRACE .

    $default  reduce using rule 8 (pointer)
